# monodevelop

./: .gitignore
main/: Main.sln  configure.in
main/src/addins/: Makefile.am
main/src/addins/MonoDeveloperExtensions/: Makefile.am  MonoDeveloperExtensions.addin.xml
main/src/addins/UnitTesting/: Makefile.am
main/src/addins/UnitTesting/MonoDevelop.UnitTesting/: AssemblyInfo.cs  IUnitTestProvider.cs  Makefile.am  MonoDevelop.UnitTesting.csproj  UnitTest.cs
main/src/addins/UnitTesting/MonoDevelop.UnitTesting.UnitTestExplorer/: AssemblyInfo.cs  Makefile.am  MonoDevelop.UnitTesting.UnitTestExplorer.addin.xml  MonoDevelop.UnitTesting.UnitTestExplorer.csproj  UnitTest.cs  UnitTestExplorerService.cs
main/src/addins/UnitTesting/MonoDevelop.UnitTesting.UnitTestExplorer/Gui/: UnitTestExplorerPad.cs  UnitTestNodeBuilder.cs
main/src/addins/UnitTesting/MonoDevelop.UnitTesting.UnitTestProvider.Nunit/: AssemblyInfo.cs  Makefile.am  MonoDevelop.UnitTesting.UnitTestProvider.Nunit.addin.xml  MonoDevelop.UnitTesting.UnitTestProvider.Nunit.csproj  NunitAssemblyUnitTest.cs  NunitUnitTest.cs  NunitUnitTestProvider.cs
